Steps towards a Java8 update