@@ -1,114 +1,76 @@
 package me.shaftesbury.utils.functional;
 
-import org.junit.Assert;
-import org.junit.Test;
+
+import org.junit.jupiter.api.Test;
 
 import java.util.Arrays;
 import java.util.List;
-import java.util.function.Function;
 
-import static me.shaftesbury.utils.functional.FunctionalHelper.*;
+import static me.shaftesbury.utils.functional.FunctionalHelper.allNone;
+import static me.shaftesbury.utils.functional.FunctionalHelper.allSome;
+import static me.shaftesbury.utils.functional.FunctionalHelper.areNone;
+import static me.shaftesbury.utils.functional.FunctionalHelper.areSome;
+import static me.shaftesbury.utils.functional.FunctionalHelper.some;
+import static org.assertj.core.api.Assertions.assertThat;
 
 /**
  * Created by Bob on 16/05/14.
  */
 public final class FunctionalHelperTest
 {
-    @Test
-    public void theyAreAllNone()
+    @Test void theyAreAllNone()
     {
-        final List<Option<Object>> input = Functional.init(new Function<Integer, Option<Object>>() {
+        final List<Option<Object>> input = Functional.init(integer -> Option.None(), 5);
 
-            public Option<Object> apply(Integer integer) {
-                return Option.None();
-            }
-        }, 5);
-
-        Assert.assertTrue(allNone(input));
+        assertThat(allNone(input)).isTrue();
     }
 
-    @Test
-    public void theyAreNotAllNone()
+    @Test void theyAreNotAllNone()
     {
-        final List<Option<Object>> input = Functional.init(new Function<Integer, Option<Object>>() {
+        final List<Option<Object>> input = Functional.init(integer -> integer==1 ? Option.toOption(Integer.valueOf(1)) : Option.None(), 5);
 
-            public Option<Object> apply(Integer integer) {
-                return integer==1 ? Option.<Object>toOption(new Integer(1)) : Option.None();
-            }
-        }, 5);
-
-        Assert.assertFalse(allNone(input));
+        assertThat(allNone(input)).isFalse();
     }
 
-    @Test
-    public void theyAreAllSome()
+    @Test void theyAreAllSome()
     {
-        final List<Option<Object>> input = Functional.init(new Function<Integer, Option<Object>>() {
+        final List<Option<Object>> input = Functional.init(integer -> Option.toOption(Integer.valueOf(1)), 5);
 
-            public Option<Object> apply(Integer integer) {
-                return Option.<Object>toOption(new Integer(1));
-            }
-        }, 5);
-
-        Assert.assertTrue(allSome(input));
+        assertThat(allSome(input)).isTrue();
     }
 
-    @Test
-    public void theyAreNotAllSome()
+    @Test void theyAreNotAllSome()
     {
-        final List<Option<Object>> input = Functional.init(new Function<Integer, Option<Object>>() {
+        final List<Option<Object>> input = Functional.init(integer -> integer==1 ? Option.toOption(Integer.valueOf(1)) : Option.None(), 5);
 
-            public Option<Object> apply(Integer integer) {
-                return integer==1 ? Option.<Object>toOption(new Integer(1)) : Option.None();
-            }
-        }, 5);
-
-        Assert.assertFalse(allSome(input));
+        assertThat(allSome(input)).isFalse();
     }
 
-    @Test
-    public void justTheOnesThatAreNone()
+    @Test void justTheOnesThatAreNone()
     {
-        final List<Option<Object>> input = Functional.init(new Function<Integer, Option<Object>>() {
-
-            public Option<Object> apply(Integer integer) {
-                return integer==1 ? Option.<Object>toOption(new Integer(1)) : Option.None();
-            }
-        }, 5);
+        final List<Option<Object>> input = Functional.init(integer -> integer==1 ? Option.toOption(Integer.valueOf(1)) : Option.None(), 5);
 
         final List<Option<Object>> output = areNone(input).toList();
 
-        Assert.assertEquals(input.size() - 1, output.size());
+        assertThat( output.size()).isEqualTo(input.size() - 1);
     }
 
-    @Test
-    public void justTheOnesThatAreSome()
+    @Test void justTheOnesThatAreSome()
     {
-        final List<Option<Object>> input = Functional.init(new Function<Integer, Option<Object>>() {
-
-            public Option<Object> apply(Integer integer) {
-                return integer==1 ? Option.<Object>toOption(new Integer(1)) : Option.None();
-            }
-        }, 5);
+        final List<Option<Object>> input = Functional.init(integer -> integer==1 ? Option.toOption(Integer.valueOf(1)) : Option.None(), 5);
 
         final List<Option<Object>> output = areSome(input).toList();
 
-        Assert.assertEquals(1, output.size());
+        assertThat( output.size()).isEqualTo(1);
     }
 
-    @Test
-    public void theValueOfJustTheOnesThatAreSome()
+    @Test void theValueOfJustTheOnesThatAreSome()
     {
-        final List<Option<Object>> input = Functional.init(new Function<Integer, Option<Object>>() {
-
-            public Option<Object> apply(Integer integer) {
-                return integer==1 ? Option.<Object>toOption(new Integer(1)) : Option.None();
-            }
-        }, 5);
+        final List<Option<Object>> input = Functional.init(integer -> integer==1 ? Option.toOption(Integer.valueOf(1)) : Option.None(), 5);
 
         final Iterable2<Option<Object>> output = areSome(input);
         final List<Object> finalOutput = some(output).toList();
 
-        AssertIterable.assertIterableEquals(Arrays.asList((Object)1),finalOutput);
+        assertThat(finalOutput).isEqualTo(Arrays.asList((Object)1));
     }
 }
