@@ -1,7 +1,7 @@
 package me.shaftesbury.utils.functional;
 
-import org.junit.Assert;
-import org.junit.Test;
+import org.assertj.core.api.IterableAssert;
+import org.junit.jupiter.api.Test;
 
 import java.util.Arrays;
 import java.util.HashMap;
@@ -9,360 +9,281 @@ import java.util.Map;
 import java.util.function.BiFunction;
 import java.util.function.Function;
 
-/**
- * Created with IntelliJ IDEA.
- * User: Bob
- * Date: 04/12/13
- * Time: 10:05
- * To change this template use File | Settings | File Templates.
- */
-public class OptionTest
-{
-    @Test
-    public void equalityTest1()
-    {
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.assertj.core.api.Assertions.assertThatExceptionOfType;
+
+public class OptionTest {
+    @Test void equalityTest1() {
         final Option<String> a = Option.toOption("TEST");
-        Assert.assertTrue(a.equals(a));
+        //noinspection EqualsWithItself
+        assertThat(a.equals(a)).isTrue();
     }
 
-    @Test
-    public void equalityTest2()
-    {
+    @Test void equalityTest2() {
         final Option<String> a = Option.toOption("TEST");
         final Option<String> b = Option.toOption("TEST");
-        Assert.assertTrue(a.equals(b));
+        assertThat(a.equals(b)).isTrue();
     }
 
-    @Test
-    public void equalityTest3()
-    {
+    @Test void equalityTest3() {
         final Option<Integer> a = Option.toOption(1);
         final Option<Integer> b = Option.toOption(2);
-        Assert.assertTrue(a.equals(a));
-        Assert.assertFalse(a.equals(b));
+        //noinspection EqualsWithItself
+        assertThat(a.equals(a)).isTrue();
+        assertThat(a.equals(b)).isFalse();
     }
 
-    @Test
-    public void OptionTestValueType1()
-    {
+    @Test void optionTestValueType1() {
         final int expected = 10;
         final Option<Integer> a = Option.toOption(expected);
-        Assert.assertTrue(a.isSome());
-        Assert.assertFalse(a.isNone());
-        Assert.assertEquals((Integer)expected, a.Some());
+        assertThat(a.isSome()).isTrue();
+        assertThat(a.isNone()).isFalse();
+        assertThat(a.Some()).isEqualTo((Integer) expected);
     }
 
-    @Test
-    public void OptionTestStringType1()
-    {
+    @Test void optionTestStringType1() {
         final String expected = "ll";
         final Option<String> a = Option.toOption(expected);
-        Assert.assertTrue(a.isSome());
-        Assert.assertFalse(a.isNone());
-        Assert.assertEquals(expected, a.Some());
+        assertThat(a.isSome()).isTrue();
+        assertThat(a.isNone()).isFalse();
+        assertThat(a.Some()).isEqualTo(expected);
     }
 
-    @Test
-    public void OptionTestValueType2()
-    {
+    @Test void optionTestValueType2() {
         final Option<Integer> a = Option.None();
-        Assert.assertTrue(a.isNone());
-        Assert.assertFalse(a.isSome());
+        assertThat(a.isNone()).isTrue();
+        assertThat(a.isSome()).isFalse();
     }
 
-    class tmp{}
+    static class tmp {
+    }
 
-    @Test
-    public void OptionTestReferenceType1()
-    {
+    @Test void optionTestReferenceType1() {
         final Option<tmp> a = Option.toOption(new tmp());
-        Assert.assertTrue(a.isSome());
-        Assert.assertFalse(a.isNone());
+        assertThat(a.isSome()).isTrue();
+        assertThat(a.isNone()).isFalse();
         a.Some();
     }
 
-    @Test
-    public void OptionTestReferenceType2()
-    {
-        final Option<tmp> a = Option.<tmp>toOption(null);
-        Assert.assertTrue(a.isNone());
-        Assert.assertFalse(a.isSome());
-    }
-
-    @Test(expected = OptionNoValueAccessException.class)
-    public void OptionTestReferenceType3()
-    {
-        final Option<tmp> a = Option.<tmp>toOption(null);
-        a.Some();
+    @Test void optionTestReferenceType2() {
+        final Option<tmp> a = Option.toOption(null);
+        assertThat(a.isNone()).isTrue();
+        assertThat(a.isSome()).isFalse();
     }
 
     @Test
-    public void compareOptionsForEqualityTest1()
-    {
+    void optionTestReferenceType3() {
+        final Option<tmp> a = Option.toOption(null);
+        assertThatExceptionOfType(OptionNoValueAccessException.class).isThrownBy(a::Some);
+    }
+
+    @Test void compareOptionsForEqualityTest1() {
         final Option<Integer> some1 = Option.toOption(1);
         final Option<Integer> some2 = Option.toOption(1);
 
-        Assert.assertEquals(some1, some2);
+        assertThat(some2).isEqualTo(some1);
     }
 
-    @Test
-    public void compareOptionsForEqualityTest2()
-    {
+    @Test void compareOptionsForEqualityTest2() {
         final Option<Integer> some1 = Option.toOption(1);
         final Option<Integer> some2 = Option.toOption(2);
 
-        Assert.assertNotEquals(some1, some2);
+        assertThat( some2).isNotEqualTo(some1);
     }
 
-    @Test
-    public void compareOptionsForEqualityTest3()
-    {
+    @Test void compareOptionsForEqualityTest3() {
         final Option<Integer> some1 = Option.toOption(1);
         final Option<Double> some2 = Option.toOption(2.1);
 
-        Assert.assertNotEquals(some1, some2);
+        assertThat( some2).isNotEqualTo(some1);
     }
 
-    @Test
-    public void compareOptionsForEqualityTest4()
-    {
+    @Test void compareOptionsForEqualityTest4() {
         final Option<Integer> none1 = Option.None();
         final Option<Integer> none2 = Option.None();
 
-        Assert.assertEquals(none1, none2);
+        assertThat(none2).isEqualTo(none1);
     }
 
-    @Test
-    public void compareOptionsForEqualityTest5()
-    {
+    @Test void compareOptionsForEqualityTest5() {
         final Option<Integer> some = Option.toOption(2);
         final Integer theInt = 2;
 
-        Assert.assertNotEquals(some, theInt);
+        assertThat( theInt).isNotEqualTo(some);
     }
 
 //    @Test
-//    public void OptionMonadTest1()
+//    public void optionMonadTest1()
 //    {
 //        var e = from a in 10.toOption()
 //        from b in 2.toOption()
 //        select a + b;
-//        Assert.assertTrue(e.isSome());
-//        Assert.assertFalse(e.isNone());
-//        Assert.assertEquals(12, e.Some());
+//        assertThat(e.isSome()).isTrue();
+//        assertThat(e.isNone()).isFalse();
+//        assertThat( e.Some()).isEqualTo(12);
 //    }
 
 //    @Test(expected = OptionNoValueAccessException.class)
-//    public void OptionMonadTest2()
+//    public void optionMonadTest2()
 //    {
 //        var e = from a in Option<Integer>.None()
 //        from b in 2.toOption()
 //        select a + b;
-//        Assert.assertTrue(e.isNone());
-//        Assert.assertFalse(e.isSome());
+//        assertThat(e.isNone()).isTrue();
+//        assertThat(e.isSome()).isFalse();
 //    }
 
 //    @Test(expected = OptionNoValueAccessException.class)
-//    public void OptionMonadTest3()
+//    public void optionMonadTest3()
 //    {
 //        var e = from a in 10.toOption()
 //        from b in Option<Integer>.None()
 //        select a + b;
-//        Assert.assertTrue(e.isNone());
-//        Assert.assertFalse(e.isSome());
+//        assertThat(e.isNone()).isTrue();
+//        assertThat(e.isSome()).isFalse();
 //    }
 
 //    @Test(expected = OptionNoValueAccessException.class)
-//    public void OptionMonadTest4()
+//    public void optionMonadTest4()
 //    {
 //        var e = from a in Option<Integer>.None()
 //        from b in Option<Integer>.None()
 //        select a + b;
-//        Assert.assertTrue(e.isNone());
-//        Assert.assertFalse(e.isSome());
+//        assertThat(e.isNone()).isTrue();
+//        assertThat(e.isSome()).isFalse();
 //    }
 
-    @Test
-    public void OptionNoneisNoneTest1()
-    {
+    @Test void optionNoneisNoneTest1() {
         final Option<Integer> none = Option.None();
-        Assert.assertTrue(none.isNone());
-        Assert.assertFalse(none.isSome());
+        assertThat(none.isNone()).isTrue();
+        assertThat(none.isSome()).isFalse();
     }
 
-    @Test
-    public void OptionNoneisNoneTest2()
-    {
+    @Test void optionNoneisNoneTest2() {
         final Option<String> none = Option.None();
-        Assert.assertTrue(none.isNone());
-        Assert.assertFalse(none.isSome());
+        assertThat(none.isNone()).isTrue();
+        assertThat(none.isSome()).isFalse();
     }
 
-    @Test
-    public void OptionNoneisNoneTest3()
-    {
+    @Test void optionNoneisNoneTest3() {
         final Option<tmp> none = Option.None();
-        Assert.assertTrue(none.isNone());
-        Assert.assertFalse(none.isSome());
+        assertThat(none.isNone()).isTrue();
+        assertThat(none.isSome()).isFalse();
     }
 
     // Java doesn't support custom value types at the moment ...
 //    struct tmp2{}
 //
 //    @Test
-//    public void OptionNoneisNone()Test4()
+//    public void optionNoneisNone()Test4()
 //    {
 //        var none = Option<tmp2>.None();
-//        Assert.assertTrue(none.isNone());
-//        Assert.assertFalse(none.isSome());
+//        assertThat(none.isNone()).isTrue();
+//        assertThat(none.isSome()).isFalse();
 //    }
 //
-    @Test
-    public void OptionBindTest1()
-    {
+    @Test void optionBindTest1() {
         final Option<Integer> a = Option.toOption(1);
         final Option<Integer> b = a.bind(
-                new Function<Integer, Option<Integer>>() {
-
-                    public Option<Integer> apply(Integer integer) {
-                        return Option.toOption(integer*2);
-                    }
-                });
-        Assert.assertTrue(b.isSome());
-        Assert.assertEquals(new Integer(2),b.Some());
+                integer -> Option.toOption(integer * 2));
+        assertThat(b.isSome()).isTrue();
+        assertThat(b.Some()).isEqualTo(Integer.valueOf(2));
     }
 
-    @Test
-    public void OptionBindTest2()
-    {
-        final Option<Integer> a = Option.<Integer>None();
+    @Test void optionBindTest2() {
+        final Option<Integer> a = Option.None();
         final Option<Integer> b = a.bind(
-                new Function<Integer, Option<Integer>>() {
-
-                    public Option<Integer> apply(Integer integer) {
-                        return Option.toOption(integer*2);
-                    }
-                });
-        Assert.assertTrue(b.isNone());
+                integer -> Option.toOption(integer * 2));
+        assertThat(b.isNone()).isTrue();
     }
 
-    @Test
-    public void OptionBindTest3()
-    {
+    @Test void optionBindTest3() {
         final Iterable2<Integer> input = IterableHelper.asList(1, 2, 3, 4, 5, 6);
         final java.util.List<Integer> expected = Arrays.asList(2, 4, 6);
 
         // Note that this really ought to be an example of 'choose' but we use bind here to exercise the code ;-)
 
         final Iterable2<Option<Integer>> output = input.map(
-                new Function<Integer, Option<Integer>>() {
-
-                    public Option<Integer> apply(Integer integer) {
-                        return Option.toOption(integer).bind(
-                                new Function<Integer,Option<Integer>>(){
-                                    public Option<Integer> apply(final Integer i) {
-                                        return Functional.isEven.apply(i) ? Option.toOption(i) : Option.<Integer>None();
-                                    } }); } } );
+                integer -> Option.toOption(integer).bind(
+                        i -> Functional.isEven.apply(i) ? Option.toOption(i) : Option.None()));
 
 
-        AssertIterable.assertIterableEquals(expected,output.choose(
-                new Function<Option<Integer>, Option<Integer>>() {
-
-                    public Option<Integer> apply(Option<Integer> integerOption) {
-                        return integerOption;
-                    }
-                }
-        ));
+        final Iterable2<Integer> choose = output.choose(Function.identity());
+        final IterableAssert<Integer> integerIterableAssert = assertThat(choose);
+        integerIterableAssert.containsExactlyElementsOf(expected);
     }
 
-    private final static BiFunction<Integer,Integer,Integer> plus = (integer1, integer2) -> integer1 + integer2;
+    private static final BiFunction<Integer, Integer, Integer> plus = Integer::sum;
 
-    @Test
-    public void OptionLiftTest1()
-    {
+    @Test void optionLiftTest1() {
         final Option<Integer> a = Option.toOption(10);
         final Option<Integer> b = Option.toOption(100);
-        final Option<Integer> c = Option.lift(plus,a,b);
+        final Option<Integer> c = Option.lift(plus, a, b);
 
-        Assert.assertTrue(c.isSome());
-        Assert.assertEquals(new Integer(110), c.Some());
+        assertThat(c.isSome()).isTrue();
+        assertThat(c.Some()).isEqualTo(Integer.valueOf(110));
     }
 
-    @Test
-    public void OptionLiftTest2()
-    {
+    @Test void optionLiftTest2() {
         final Option<Integer> a = Option.toOption(10);
-        final Option<Integer> b = Option.<Integer>None();
-        final Option<Integer> c = Option.lift(plus,a,b);
+        final Option<Integer> b = Option.None();
+        final Option<Integer> c = Option.lift(plus, a, b);
 
-        Assert.assertTrue(c.isNone());
+        assertThat(c.isNone()).isTrue();
     }
 
-    @Test
-    public void OptionLiftTest3()
-    {
-        final Option<Integer> a = Option.<Integer>None();
+    @Test void optionLiftTest3() {
+        final Option<Integer> a = Option.None();
         final Option<Integer> b = Option.toOption(10);
-        final Option<Integer> c = Option.lift(plus,a,b);
+        final Option<Integer> c = Option.lift(plus, a, b);
 
-        Assert.assertTrue(c.isNone());
+        assertThat(c.isNone()).isTrue();
     }
 
-    @Test
-    public void OptionLiftTest4()
-    {
-        final Option<Integer> a = Option.<Integer>None();
-        final Option<Integer> b = Option.<Integer>None();
-        final Option<Integer> c = Option.lift(plus,a,b);
+    @Test void optionLiftTest4() {
+        final Option<Integer> a = Option.None();
+        final Option<Integer> b = Option.None();
+        final Option<Integer> c = Option.lift(plus, a, b);
 
-        Assert.assertTrue(c.isNone());
+        assertThat(c.isNone()).isTrue();
     }
 
-    @Test
-    public void OptionToStringTest()
-    {
+    @Test void optionToStringTest() {
         final Option<String> a = Option.toOption("string");
         final Option<Integer> b = Option.toOption(10);
         final Option<Boolean> c = Option.toOption(false);
         final Option<String> d = Option.None();
 
-        Assert.assertEquals("Option( string )",a.toString());
-        Assert.assertEquals("Option( 10 )",b.toString());
-        Assert.assertEquals("Option( false )",c.toString());
-        Assert.assertEquals("None",d.toString());
+        assertThat(a.toString()).isEqualTo("Option( string )");
+        assertThat(b.toString()).isEqualTo("Option( 10 )");
+        assertThat(c.toString()).isEqualTo("Option( false )");
+        assertThat(d.toString()).isEqualTo("None");
     }
 
-    @Test
-    public void OptionSomeCreatorTestValueType1()
-    {
+    @Test void optionSomeCreatorTestValueType1() {
         final int expected = 10;
         final Option<Integer> a = Option.Some(expected);
-        Assert.assertTrue(a.isSome());
-        Assert.assertFalse(a.isNone());
-        Assert.assertEquals((Integer)expected, a.Some());
+        assertThat(a.isSome()).isTrue();
+        assertThat(a.isNone()).isFalse();
+        assertThat(a.Some()).isEqualTo((Integer) expected);
     }
 
-    @Test
-    public void OptionSomeCreatorTestStringType1()
-    {
+    @Test void optionSomeCreatorTestStringType1() {
         final String expected = "ll";
         final Option<String> a = Option.Some(expected);
-        Assert.assertTrue(a.isSome());
-        Assert.assertFalse(a.isNone());
-        Assert.assertEquals(expected, a.Some());
-    }
-
-    @Test(expected = OptionNoValueAccessException.class)
-    public void OptionSomeCreatorTestValueType2()
-    {
-        final Option<Integer> a = Option.Some(null);
+        assertThat(a.isSome()).isTrue();
+        assertThat(a.isNone()).isFalse();
+        assertThat(a.Some()).isEqualTo(expected);
     }
 
     @Test
-    public void collectionOfOption()
-    {
-        final Map<Option<Integer>,Integer> map = new HashMap<Option<Integer>, Integer>();
-        map.put(Option.toOption(1),1);
-        Assert.assertEquals(new Integer(1), map.get(Option.toOption(1)));
+    void optionSomeCreatorTestValueType2() {
+        assertThatExceptionOfType(OptionNoValueAccessException.class).isThrownBy(()->Option.Some(null));
+    }
+
+    @Test void collectionOfOption() {
+        final Map<Option<Integer>, Integer> map = new HashMap<>();
+        map.put(Option.toOption(1), 1);
+        assertThat(map.get(Option.toOption(1))).isEqualTo(Integer.valueOf(1));
     }
 }
